@@ -1,2 +1,5 @@
 Maintainers:
 	Luca Falavigna <dktrkranz@ubuntu.com>
+
+Contributors:
+	David Futcher <bobbo@ubuntu.com>
