@@ -36,6 +36,17 @@ keyring: /etc/debomatic/debomatic.gpg
 
 
 
+# Modules section
+[modules]
+
+# Set this option to 1 if you want to enable modules support
+modules: 1
+
+# Set this to the directory containing your debomatic modules
+modulespath: /etc/debomatic/modules
+
+
+
 # Checks section
 [checks]
 
